HBSD: Fixup lang/gcc10
Follow the same pattern as lang/gcc9.

Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/lang/gcc10/Makefile
+++ b/lang/gcc10/Makefile
@@ -1,6 +1,8 @@
 # Created by: Gerald Pfeifer <gerald@FreeBSD.org>
 # $FreeBSD$
 
+BINARY_ALIAS= objdump=/usr/local/bin/objdump
+
 PORTNAME=	gcc
 PORTVERSION=	10.2.0
 CATEGORIES=	lang
@@ -12,6 +14,8 @@ COMMENT=	GNU Compiler Collection 10
 
 LICENSE=	GPLv3 GPLv3RLE
 LICENSE_COMB=	multi
+
+USE_HARDENING=  pie:off relro:off retpoline:off
 
 ONLY_FOR_ARCHS=	aarch64 amd64 arm armv6 armv7 i386 powerpc powerpc64 powerpc64le
 
