HBSD: Disable variable auto-init for lang/rust
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/lang/rust/Makefile
+++ b/lang/rust/Makefile
@@ -37,6 +37,8 @@ LIB_DEPENDS=	libcurl.so:ftp/curl \
 		libgit2.so:devel/libgit2 \
 		libssh2.so:security/libssh2
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		pkgconfig python:3.6+,build ssl tar:xz
 
 MAKE_ENV=	DESTDIR=${STAGEDIR} \
