HBSD: Disable variable auto-init for lang/gcc6-aux
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/lang/gcc6-aux/Makefile
+++ b/lang/gcc6-aux/Makefile
@@ -18,7 +18,7 @@ LICENSE_COMB=	multi
 
 .include "${.CURDIR}/Makefile.common"
 
-USE_HARDENING=	pie:off relro:off retpoline:off
+USE_HARDENING=	pie:off relro:off retpoline:off stackautoinit:off
 
 LANGS=			c c++ ada
 APPLY_DIFFS=		core cxx ada
