--- a/lang/gcc48/Makefile
+++ b/lang/gcc48/Makefile
@@ -32,7 +32,7 @@ USE_PERL5=	build
 
 CPE_VENDOR=	gnu
 
-USE_HARDENING=	pie:off relro:off retpoline:off
+USE_HARDENING=	pie:off relro:off retpoline:off stackautoinit:off
 
 GCC_VERSION=	${PORTVERSION}
 SUFFIX=		${PORTVERSION:C/([0-9]+).([0-9]+).*/\1\2/}
