--- a/lang/gcc10/Makefile
+++ b/lang/gcc10/Makefile
@@ -15,7 +15,7 @@ COMMENT=	GNU Compiler Collection 10
 LICENSE=	GPLv3 GPLv3RLE
 LICENSE_COMB=	multi
 
-USE_HARDENING=  pie:off relro:off retpoline:off
+USE_HARDENING=  pie:off relro:off retpoline:off stackautoinit:off
 
 ONLY_FOR_ARCHS=	aarch64 amd64 arm armv6 armv7 i386 powerpc powerpc64 powerpc64le
 
