HBSD: Disable variable auto-init for www/cplanet
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/www/cplanet/Makefile
+++ b/www/cplanet/Makefile
@@ -12,6 +12,8 @@ COMMENT=	RSS Feed Aggregator that generate static html
 LICENSE=	BSD2CLAUSE
 LICENSE_FILE=	${WRKSRC}/COPYING
 
+USE_HARDENING=	stackautoinit:off
+
 BUILD_DEPENDS=	${LOCALBASE}/lib/libneo_cs.a:www/clearsilver
 LIB_DEPENDS=	libexpat.so:textproc/expat2 \
 		libcurl.so:ftp/curl
