HBSD: Disable variable auto-init for sysutils/powerdxx
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/sysutils/powerdxx/Makefile
+++ b/sysutils/powerdxx/Makefile
@@ -9,7 +9,7 @@ COMMENT=	CPU clock speed/frequency daemon
 
 LICENSE=	ISCL
 
-USE_HARDENING=	safestack
+USE_HARDENING=	safestack stackautoinit:off
 
 USES=		compiler:c++17-lang
 
