--- a/devel/crc32c/Makefile
+++ b/devel/crc32c/Makefile
@@ -15,7 +15,7 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	google
 USE_LDCONFIG=	yes
 
-USE_HARDENING=	pie:off
+USE_HARDENING=	pie:off stackautoinit:off
 
 CMAKE_ON=	BUILD_SHARED_LIBS
 CMAKE_OFF=	CRC32C_BUILD_TESTS CRC32C_BUILD_BENCHMARKS CRC32C_USE_GLOG
