--- a/graphics/libheif/Makefile
+++ b/graphics/libheif/Makefile
@@ -13,6 +13,8 @@ COMMENT=		Libheif is an ISO/IEC 23008-12:2017 HEIF file format de- and encoder
 LICENSE=		LGPL3+
 LICENSE_FILE_LGPL3+ =	${WRKSRC}/COPYING
 
+USE_HARDENING=		stackautoinit:off
+
 USES=			autoreconf compiler:c++11-lang libtool localbase pkgconfig \
 			shebangfix
 USE_GITHUB=		yes
