HBSD: Disable variable auto-init for devel/flatbuffers
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/devel/flatbuffers/Makefile
+++ b/devel/flatbuffers/Makefile
@@ -12,6 +12,8 @@ COMMENT=	Memory efficient serialization library
 LICENSE=	APACHE20
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		cmake compiler:c++11-lib
 USE_LDCONFIG=	yes
 USE_GITHUB=	yes
