HBSD: Disable variable auto-init for graphics/opencolorio
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/graphics/opencolorio/Makefile
+++ b/graphics/opencolorio/Makefile
@@ -12,7 +12,7 @@ COMMENT?=	Complete color management solution
 
 LICENSE=	BSD3CLAUSE
 
-USE_HARDENING=	pie:off
+USE_HARDENING=	pie:off stackautoinit:off
 
 USES=		alias cmake compiler:c++11-lang localbase:ldflags pkgconfig \
 		shebangfix
