HBSD: Disable variable auto-init for multimedia/cmrtlib
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/multimedia/cmrtlib/Makefile
+++ b/multimedia/cmrtlib/Makefile
@@ -23,6 +23,6 @@ GH_ACCOUNT=	intel
 GH_PROJECT=	media-driver
 WRKSRC_SUBDIR=	${PORTNAME}
 
-USE_HARDENING=	pie:off
+USE_HARDENING=	pie:off stackautoinit:off
 
 .include <bsd.port.mk>
