--- a/math/openblas/Makefile
+++ b/math/openblas/Makefile
@@ -17,6 +17,8 @@ COMMENT=	Optimized BLAS library based on GotoBLAS2
 LICENSE=	BSD3CLAUSE
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		fortran gmake perl5 pkgconfig
 
 CONFLICTS_INSTALL=	cblas lapacke
