HBSD: Fix typo for lang/gcc9
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/lang/gcc9/Makefile
+++ b/lang/gcc9/Makefile
@@ -16,7 +16,7 @@ COMMENT=	GNU Compiler Collection 9
 LICENSE=	GPLv3 GPLv3RLE
 LICENSE_COMB=	multi
 
-USE_HARDENING=	pie:off relro:off retpoline:off autostackinit:off
+USE_HARDENING=	pie:off relro:off retpoline:off stackautoinit:off
 
 ONLY_FOR_ARCHS=	aarch64 amd64 arm armv6 armv7 i386 powerpc powerpc64 sparc64
 
