HBSD: Disable variable auto-init for graphics/GraphicsMagick
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/graphics/GraphicsMagick/Makefile
+++ b/graphics/GraphicsMagick/Makefile
@@ -24,7 +24,7 @@ INSTALL_TARGET=	install-strip
 TEST_TARGET=	check
 USE_LDCONFIG=	yes
 
-USE_HARDENING=	retpoline:off
+USE_HARDENING=	retpoline:off stackautoinit:off
 
 # Use fonts installed by x11-fonts/webfonts by default
 WINDOWS_FONT_DIR?=	${LOCALBASE}/share/fonts/webfonts
