HBSD: Disable PIE for security/afl++
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/security/afl++/Makefile
+++ b/security/afl++/Makefile
@@ -18,6 +18,8 @@ ONLY_FOR_ARCHS_REASON=	uses x86-only instrumentation or requires complete LLVM s
 BUILD_DEPENDS=	ginstall:sysutils/coreutils
 TEST_DEPENDS=	bash:shells/bash
 
+USE_HARDENING=	pie:off
+
 USES=		gmake tar:tgz
 USE_GITHUB=	yes
 GH_ACCOUNT=	AFLplusplus
