HBSD: Disable variable auto-init for irc/iroffer-dinoex
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/irc/iroffer-dinoex/Makefile
+++ b/irc/iroffer-dinoex/Makefile
@@ -24,7 +24,7 @@ MAKE_ENV=	LANG=en_EN.UTF-8
 ALL_TARGET=	all-lang doc
 USE_RC_SUBR=	iroffer
 
-USE_HARDENING=	pie:off relro:off
+USE_HARDENING=	pie:off relro:off stackautoinit:off
 
 IROFFER_DOCS=	README README.modDinoex LIESMICH.modDinoex \
 		LICENSE THANKS TODO \
