--- a/games/colobot/Makefile
+++ b/games/colobot/Makefile
@@ -23,6 +23,8 @@ LIB_DEPENDS=	libpng.so:graphics/png \
 		libphysfs.so:devel/physfs \
 		libboost_system.so:devel/boost-libs
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		cmake compiler:c++11-lang gl gettext-runtime \
 		gettext-tools:build localbase:ldflags openal python:build \
 		sdl shebangfix
