HBSD: Disable variable auto-init for games/multimc
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/games/multimc/Makefile
+++ b/games/multimc/Makefile
@@ -23,7 +23,7 @@ USE_JAVA=	1.8+
 USE_QT=		core concurrent gui network testlib_build widgets xml \
 		buildtools_build qmake_build
 
-USE_HARDENING=	pie:off
+USE_HARDENING=	pie:off stackautoinit:off
 
 CMAKE_ARGS=	-DMultiMC_LAYOUT="lin-system"
 CMAKE_OFF=	MultiMC_UPDATER
