HBSD: Disable variable auto-init for dns/unbound
This one's interesting, since unbound in base compiles fine with
variable auto-init.

Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/dns/unbound/Makefile
+++ b/dns/unbound/Makefile
@@ -16,6 +16,8 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 LIB_DEPENDS=	libexpat.so:textproc/expat2
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		autoreconf cpe libtool pkgconfig ssl
 
 CPE_VENDOR=	nlnetlabs
