HBSD: Disable variable auto-init for sysutils/libg15
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/sysutils/libg15/Makefile
+++ b/sysutils/libg15/Makefile
@@ -11,6 +11,8 @@ COMMENT=	API for control of LCD and the extra keys on Logitech keyboards
 LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		compiler:gcc-c++11-lib gmake libtool tar:bzip2
 
 GNU_CONFIGURE=	yes
