HBSD: Disable variable auto-init for security/libfido2
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/security/libfido2/Makefile
+++ b/security/libfido2/Makefile
@@ -16,6 +16,8 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 LIB_DEPENDS=	libcbor.so:devel/libcbor \
 		libhidapi.so.0:comms/hidapi
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		cmake compiler:c11 pkgconfig ssl
 
 CFLAGS+=	-D_WITH_GETLINE
