HBSD: Disable variable auto-init for math/octave-forge-nurbs
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/math/octave-forge-nurbs/Makefile
+++ b/math/octave-forge-nurbs/Makefile
@@ -12,6 +12,8 @@ COMMENT=	Octave-forge package ${OCTAVE_PKGNAME}
 LICENSE=	GPLv3
 LICENSE_FILE=	${WRKDIR}/${OCTSRC}/COPYING
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		compiler:openmp
 
 # OCTSRC is the name of the directory of the package.
