--- a/cad/openroad/Makefile
+++ b/cad/openroad/Makefile
@@ -21,6 +21,8 @@ BUILD_DEPENDS=	base64:converters/base64 \
 		swig:devel/swig
 LIB_DEPENDS=	libcudd.so:math/cudd
 
+USE_HARDEINING=	stackautoinit:off
+
 USES=		bison compiler:c++17-lang cmake eigen:3 qt:5 tcl:86 # the code asks for tcl-87, but build fails: https://github.com/The-OpenROAD-Project/OpenROAD/issues/508
 USE_GITHUB=	yes
 GH_ACCOUNT=	The-OpenROAD-Project
