HBSD: Disable variable auto-init for www/bozohttpd
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/www/bozohttpd/Makefile
+++ b/www/bozohttpd/Makefile
@@ -22,6 +22,8 @@ SSL_USES=	ssl
 SSL_CFLAGS=	-I${OPENSSLINC}
 SSL_LDFLAGS=	-L${OPENSSLLIB}
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		cpe uidfix tar:bzip2
 CPE_VENDOR=	eterna
 
