--- a/net/ipxe/Makefile
+++ b/net/ipxe/Makefile
@@ -14,6 +14,8 @@ LICENSE=	GPLv2
 ONLY_FOR_ARCHS=	amd64 i386
 ONLY_FOR_ARCHS_REASON=	not yet ported to anything other than amd64/i386
 
+USE_HARDENING=	stackautoinit:off
+
 USES=		gmake perl5 shebangfix
 USE_BINUTILS=	yes
 USE_GCC=	yes
